--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "electron": "13.1.6",
-    "rimraf": "^3.0.2"
+    "electron-reloader": "^1.2.1",
+    "rimraf": "^3.0.2",
+    "tsc-watch": "^4.4.0"
   },
   "scripts": {
     "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.png src/**/*.svg build/",
     "compile": "tsc && npm run copy-files",
+    "watch": "tsc-watch --onSuccess \"npm run copy-files\"",
     "start": "npm run compile && electron ."
   }
 }
