--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,4 +67,17 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   }
+  // "watchOptions": {
+  //   // Use native file system events for files and directories
+  //   "watchFile": "useFsEvents",
+  //   "watchDirectory": "useFsEvents",
+  //   // Poll files for updates more frequently
+  //   // when they're updated a lot.
+  //   "fallbackPolling": "dynamicPriority",
+  //   // Don't coalesce watch notification
+  //   "synchronousWatchDirectory": true
+  //   // Finally, two additional settings for reducing the amount of possible
+  //   // files to track  work from these directories
+  //   // "excludeDirectories": ["**/node_modules"]
+  // }
 }
