--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "build/main.js",
   "devDependencies": {
+    "@types/sound-play": "^1.1.0",
     "copyfiles": "^2.4.1",
     "electron": "13.1.6",
     "electron-reloader": "^1.2.1",
