--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.57",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
     "@electron-forge/maker-zip": "^6.0.0-beta.57",
+    "@types/node": "^14.17.5",
     "@types/sound-play": "^1.1.0",
     "@types/wavesurfer.js": "^5.1.0",
     "copyfiles": "^2.4.1",
