migrated to yarn

--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "MatamataTC",
-  "description": "Create the timestamps file for Matamata",
+  "name": "matamatadesktop",
+  "executableName": "Matamata Desktop",
+  "description": "Desktop GUI for Matamata",
   "license": "MIT",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "build/main.js",
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.57",
-    "@electron-forge/maker-deb": "^6.0.0-beta.57",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.57",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
-    "@electron-forge/maker-zip": "^6.0.0-beta.57",
     "@types/node": "^14.17.5",
     "@types/sound-play": "^1.1.0",
     "@types/wavesurfer.js": "^5.1.0",
     "copyfiles": "^2.4.1",
     "electron": "^13.1.6",
+    "electron-builder": "^22.11.7",
     "electron-reloader": "^1.2.1",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.4.0"
@@ -23,40 +20,11 @@
     "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.png src/**/*.svg build/",
     "compile": "tsc && npm run copy-files",
     "watch": "tsc-watch --onSuccess \"npm run copy-files\"",
-    "start": "npm run compile && electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "start": "npm run compile && electron ."
   },
   "dependencies": {
     "dialogs": "^2.0.1",
-    "electron-squirrel-startup": "^1.0.0",
+    "typescript": "^4.3.5",
     "wavesurfer.js": "^5.1.0"
-  },
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": ""
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
   }
 }
