--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "dialogs": "^2.0.1",
+    "electron-is-dev": "^2.0.0",
     "typescript": "^4.3.5",
+    "update-electron-app": "^2.0.1",
     "wavesurfer.js": "^5.1.0"
   },
   "build": {
