--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "name": "Matamata-Animator",
     "email": "matamata@aispawn.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Matamata-Animator/Desktop.git"
+  },
   "license": "MIT",
   "version": "0.1.0",
   "main": "build/main.js",
@@ -22,17 +26,18 @@
   },
   "scripts": {
     "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.png src/**/*.svg src/**/*.icns src/**/*.ico build/",
-    "compile": "tsc && yarn run copy-files",
+    "build": "tsc && yarn run copy-files",
     "watch": "tsc-watch --onSuccess \"yarn run copy-files\"",
-    "start": "yarn run compile && electron .",
+    "start": "yarn run build && electron .",
     "pack": "electron-builder --dir",
-    "full-dist": "yarn run compile && electron-builder -wl",
-    "dist": "yarn run compile && electron-builder",
+    "full-dist": "yarn run build && electron-builder -wl",
+    "dist": "yarn run build && electron-builder",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "dialogs": "^2.0.1",
     "electron-is-dev": "^2.0.0",
+    "electron-updater": "^4.3.9",
     "typescript": "^4.3.5",
     "update-electron-app": "^2.0.1",
     "wavesurfer.js": "^5.1.0"
@@ -42,12 +47,21 @@
     "productName": "Matamata Desktop",
     "linux": {
       "target": [
-        "deb"
+        "AppImage"
       ],
-      "category": "Office"
+      "category": "Office",
+      "publish": {
+        "provider": "github"
+      }
     },
     "win": {
-      "icon": "build/icons/icon.ico"
+      "icon": "build/icons/icon.ico",
+      "target": [
+        "NSIS"
+      ],
+      "publish": {
+        "provider": "github"
+      }
     },
     "files": [
       "build/"
