--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Matamata-Animator/Desktop.git"
   },
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "v0.1.2",
   "main": "build/main.js",
   "devDependencies": {
     "@types/node": "^14.17.5",
