--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matamatadesktop",
+  "name": "matamata",
   "executableName": "Matamata Desktop",
   "description": "Desktop GUI for Matamata",
   "author": {
@@ -11,7 +11,7 @@
     "url": "https://github.com/Matamata-Animator/Desktop.git"
   },
   "license": "MIT",
-  "version": "v0.1.2",
+  "version": "v0.1.3",
   "main": "build/main.js",
   "devDependencies": {
     "@types/node": "^14.17.5",
@@ -30,8 +30,8 @@
     "watch": "tsc-watch --onSuccess \"yarn run copy-files\"",
     "start": "yarn run build && electron .",
     "pack": "electron-builder --dir",
-    "full-dist": "yarn run build && electron-builder -wl",
-    "dist": "yarn run build && electron-builder",
+    "full-dist": "yarn run build && electron-builder -wl --publish always",
+    "dist": "yarn run build && electron-builder --publish always",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
@@ -43,15 +43,20 @@
     "wavesurfer.js": "^5.1.0"
   },
   "build": {
-    "appId": "com.aispawn.matamatadesktop",
+    "appId": "com.aispawn.matamata",
     "productName": "Matamata Desktop",
     "linux": {
       "target": [
-        "AppImage"
+        "snap",
+        "AppImage",
+        "deb"
       ],
       "category": "Office",
       "publish": {
-        "provider": "github"
+        "provider": "snapStore",
+        "channels": [
+          "edge"
+        ]
       }
     },
     "win": {
