--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Matamata-Animator/Desktop.git"
   },
   "license": "MIT",
-  "version": "v0.1.3",
+  "version": "v0.1.4",
   "main": "build/main.js",
   "devDependencies": {
     "@types/node": "^14.17.5",
@@ -30,8 +30,8 @@
     "watch": "tsc-watch --onSuccess \"yarn run copy-files\"",
     "start": "yarn run build && electron .",
     "pack": "electron-builder --dir",
-    "full-dist": "yarn run build && electron-builder -wl --publish always",
-    "dist": "yarn run build && electron-builder --publish always",
+    "full-dist": "ELECTRON_IS_DEV=0 && yarn run build && electron-builder -wl --publish always",
+    "dist": "ELECTRON_IS_DEV=0 && yarn run build && electron-builder --publish always",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
