--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "productName": "Matamata Desktop",
     "linux": {
       "target": [
-        "snap",
-        "deb"
+        "snap"
       ],
       "category": "Office",
       "publish": {
