--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@types/p5": "^1.3.0",
     "dialogs": "^2.0.1",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^4.3.9",
+    "p5": "^1.4.0",
     "typescript": "^4.3.5",
     "update-electron-app": "^2.0.1",
     "wavesurfer.js": "^5.1.0"
