--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "tsc-watch": "^4.4.0"
   },
   "scripts": {
-    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.png src/**/*.svg src/**/*.icns src/**/*.ico build/",
+    "clean": "find build/ -name \"*.ts\" -type f -delete",
+    "copy-files": "cp -a src/. build/ && yarn run clean",
     "build": "tsc && yarn run copy-files",
     "watch": "tsc-watch --onSuccess \"yarn run copy-files\"",
     "start": "yarn run build && electron .",
