--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "build": {
     "appId": "com.aispawn.matamata",
     "productName": "Matamata Desktop",
-    "extraResources": "build/Matamata-Core",
+    "extraResources": "build/render/Matamata-Core",
     "linux": {
       "target": [
         "snap"
