--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "tsc-watch": "^4.4.0"
   },
   "scripts": {
-    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.png src/**/*.svg src/**/*.icns src/**/*.ico src/**/*.js src/**/**/*.woff src/**/**/*.css src/**/**/*.png build/",
+    "copy-core-files": "copyfiles -u 1 src/render/Matamata-Core/* build/",
+    "copy-files": "yarn copy-core-files && copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.png src/**/*.svg src/**/*.icns src/**/*.ico src/**/*.js src/**/**/*.woff src/**/**/*.css src/**/**/*.png build/",
     "build": "tsc && yarn run copy-files",
     "watch": "tsc-watch --onSuccess \"yarn run copy-files\"",
     "start": "yarn run build && electron .",
@@ -38,8 +39,10 @@
     "@types/p5": "^1.3.0",
     "dialogs": "^2.0.1",
     "electron-is-dev": "^2.0.0",
+    "electron-sudo": "^4.0.12",
     "electron-updater": "^4.3.9",
     "p5": "^1.4.0",
+    "spawn-command": "^0.0.2-1",
     "typescript": "^4.3.5",
     "update-electron-app": "^2.0.1",
     "wavesurfer.js": "^5.1.0"
