--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "tsc-watch": "^4.4.0"
   },
   "scripts": {
-    "copy-core-files": "copyfiles -u 1 src/render/Matamata-Core/* build/",
+    "copy-core-files": "copyfiles -u 1 src/render/Matamata-Core/* src/render/Matamata-Core/**/* src/render/Matamata-Core/**/**/* build/",
     "copy-files": "yarn copy-core-files && copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.png src/**/*.svg src/**/*.icns src/**/*.ico src/**/*.js src/**/**/*.woff src/**/**/*.css src/**/**/*.png build/",
     "build": "tsc && yarn run copy-files",
     "watch": "tsc-watch --onSuccess \"yarn run copy-files\"",
