--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/p5": "^1.3.0",
     "dialogs": "^2.0.1",
     "electron-is-dev": "^2.0.0",
-    "electron-sudo": "^4.0.12",
     "electron-updater": "^4.3.9",
     "p5": "^1.4.0",
     "spawn-command": "^0.0.2-1",
@@ -50,17 +49,19 @@
   "build": {
     "appId": "com.aispawn.matamata",
     "productName": "Matamata Desktop",
-    "extraResources": "build/render/Matamata-Core",
+    "extraResources": [
+      "build/render/Matamata-Core/*",
+      "build/render/Matamata-Core/**/*",
+      "build/render/Matamata-Core/**/**/*"
+    ],
     "linux": {
       "target": [
-        "snap"
+        "AppImage",
+        "deb"
       ],
       "category": "Office",
       "publish": {
-        "provider": "snapStore",
-        "channels": [
-          "edge"
-        ]
+        "provider": "github"
       }
     },
     "snap": {
