--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       }
     },
     "snap": {
-      "confinement": "classic",
+      "confinement": "strict",
       "grade": "stable"
     },
     "win": {
