--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "open": "^8.2.1",
     "p5": "^1.4.0",
     "spawn-command": "^0.0.2-1",
+    "sweetalert2": "^11.0.18",
     "typescript": "^4.3.5",
     "update-electron-app": "^2.0.1",
     "wavesurfer.js": "^5.1.0"
