--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "electron": "^13.1.6",
     "electron-builder": "^22.11.7",
     "electron-reloader": "^1.2.1",
+    "prettier": "2.3.2",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.4.0"
   },
