--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matamata",
-  "version": "v0.6.4",
+  "version": "v0.6.5",
   "executableName": "Matamata Desktop",
   "description": "Desktop GUI for Matamata",
   "author": {
@@ -43,6 +43,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^4.3.9",
     "node-fetch": "^2.6.1",
+    "node-powershell": "^4.0.0",
     "open": "^8.2.1",
     "p5": "^1.4.0",
     "spawn-command": "^0.0.2-1",
@@ -84,6 +85,7 @@
     },
     "win": {
       "icon": "build/icons/icon.ico",
+      "requestedExecutionLevel": "requireAdministrator",
       "target": [
         "NSIS"
       ],
