--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matamata",
-  "version": "v0.6.6",
+  "version": "v0.6.7",
   "executableName": "Matamata Desktop",
   "description": "Desktop GUI for Matamata",
   "author": {
@@ -42,11 +42,13 @@
     "dialogs": "^2.0.1",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^4.3.9",
+    "is-elevated": "^3.0.0",
     "node-fetch": "^2.6.1",
     "node-powershell": "^4.0.0",
     "open": "^8.2.1",
     "p5": "^1.4.0",
     "spawn-command": "^0.0.2-1",
+    "sudo-block": "^4.0.0",
     "sweetalert2": "^11.0.18",
     "typescript": "^4.3.5",
     "update-electron-app": "^2.0.1",
@@ -85,7 +87,6 @@
     },
     "win": {
       "icon": "build/icons/icon.ico",
-      "requestedExecutionLevel": "requireAdministrator",
       "target": [
         "NSIS"
       ],
