--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/p5": "^1.3.0",
     "dialogs": "^2.0.1",
     "electron-is-dev": "^2.0.0",
+    "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
     "is-elevated": "^3.0.0",
     "node-fetch": "^2.6.1",
