--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
     "is-elevated": "^3.0.0",
+    "jquery": "^3.6.0",
     "node-fetch": "^2.6.1",
     "node-powershell": "^4.0.0",
     "open": "^8.2.1",
