--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "main": "build/main.js",
   "devDependencies": {
+    "@types/jquery": "^3.5.6",
     "@types/node": "^14.17.5",
     "@types/sound-play": "^1.1.0",
     "@types/wavesurfer.js": "^5.1.0",
