--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matamata",
-  "version": "v1.0.0rc1",
+  "version": "v1.0.1",
   "executableName": "Matamata Desktop",
   "description": "Desktop GUI for Matamata",
   "author": {
