--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "matamata",
-  "version": "v1.0.1",
-  "executableName": "Matamata Desktop",
+  "version": "v1.1.0",
+  "executableName": "Matamata Studio",
   "description": "Desktop GUI for Matamata",
   "author": {
     "name": "Matamata-Animator",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Matamata-Animator/Desktop.git"
+    "url": "https://github.com/Matamata-Animator/Matamata-Studio.git"
   },
   "license": "MIT",
   "main": "build/main.js",
