--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/p5": "^1.3.0",
     "dialogs": "^2.0.1",
     "electron-is-dev": "^2.0.0",
+    "electron-log": "^4.4.1",
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
     "is-elevated": "^3.0.0",
