--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
   "scripts": {
     "copy-core-files": "copyfiles -u 1 src/render/Core/* src/render/Core/**/* src/render/Core/**/**/* build/",
     "copy-asset-files": "copyfiles -u 1 src/assets/* src/assets/**/* src/assets/**/**/* build/",
-    "copy-files": "yarn copy-core-files && yarn copy-asset-files && copyfiles -u 1 src/*.json src/**/*.json src/**/*.html src/**/*.css src/**/*.png src/**/*.svg src/**/*.icns src/**/*.ico src/**/*.js src/**/**/*.woff src/**/**/*.css src/**/**/*.png src/styles/fa/* src/styles/fa/**/* src/styles/fa/**/**/* src/styles/fa/**/**/**/* build/",
-    "build": "tsc && yarn run copy-files",
-    "watch": "tsc-watch --onSuccess \"yarn run copy-files\"",
-    "start": "yarn run build && electron .",
+    "copy-files": "npm run copy-core-files && npm run copy-asset-files && copyfiles -u 1 src/*.json src/**/*.json src/**/*.html src/**/*.css src/**/*.png src/**/*.svg src/**/*.icns src/**/*.ico src/**/*.js src/**/**/*.woff src/**/**/*.css src/**/**/*.png src/styles/fa/* src/styles/fa/**/* src/styles/fa/**/**/* src/styles/fa/**/**/**/* build/",
+    "build": "tsc && npm run copy-files",
+    "watch": "tsc-watch --onSuccess \"npm run copy-files\"",
+    "start": "npm run build && electron . --no-sandbox",
     "pack": "electron-builder --dir",
-    "full-dist": "yarn run build && electron-builder -wl",
-    "dist": "yarn run build && electron-builder",
+    "full-dist": "npm run build && electron-builder -wl",
+    "dist": "npm run build && electron-builder",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
