--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "open": "^8.2.1",
     "p5": "^1.4.0",
     "pako": "^2.0.4",
+    "path": "^0.12.7",
     "spawn-command": "^0.0.2-1",
     "sudo-block": "^4.0.0",
     "sweetalert2": "^11.0.18",
