--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "electron-log": "^4.4.1",
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
+    "get-audio-duration": "^3.1.0",
     "is-elevated": "^3.0.0",
     "jquery": "^3.6.0",
     "node-fetch": "^2.6.1",
