--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
     "get-audio-duration": "^3.1.0",
+    "ibm-watson": "^7.0.0",
     "is-elevated": "^3.0.0",
     "jquery": "^3.6.0",
     "node-fetch": "^2.6.1",
+    "node-libcurl": "^2.3.4",
     "node-powershell": "^4.0.0",
     "open": "^8.2.1",
     "p5": "^1.4.0",
