--- a/package.json
+++ b/package.json
@@ -38,18 +38,27 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.10.0",
+    "@ffmpeg/ffmpeg": "^0.10.1",
     "@types/node-fetch": "^2.5.11",
     "@types/p5": "^1.3.0",
     "dialogs": "^2.0.1",
+    "dockerode": "^3.3.2",
+    "download": "^8.0.0",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.1",
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
+    "extract-zip": "^2.0.1",
+    "figlet": "^1.5.2",
+    "fs-extra": "^10.1.0",
     "get-audio-duration": "^3.1.0",
     "ibm-watson": "^7.0.0",
     "is-elevated": "^3.0.0",
+    "jimp": "^0.16.1",
     "jquery": "^3.6.0",
     "node-fetch": "^2.6.1",
+    "node-gyp": "^9.1.0",
     "node-libcurl": "^2.3.4",
     "node-powershell": "^4.0.0",
     "open": "^8.2.1",
@@ -59,9 +68,12 @@
     "spawn-command": "^0.0.2-1",
     "sudo-block": "^4.0.0",
     "sweetalert2": "^11.0.18",
+    "terminal-kit": "^2.4.0",
     "typescript": "^4.3.5",
     "update-electron-app": "^2.0.1",
-    "wavesurfer.js": "^5.1.0"
+    "vosk": "^0.3.39",
+    "wavesurfer.js": "^5.1.0",
+    "yargs": "^17.5.1"
   },
   "build": {
     "appId": "com.aispawn.matamata",
