--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/Matamata-Core"]
-	path = src/Matamata-Core
+[submodule "src/Core"]
+	path = src/Core
 	url = https://github.com/Matamata-Animator/Matamata-Core
